# Capstone_Project

./: CMakeLists.txt  README.md  actor  code3d  codechaydc_2  codemau  llll  package.xml  tarkbot  toado
config/: mapper_params_online_async.yaml  my_controller_4WD.yaml  nav2_params.yaml
description/: depth_camera.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_main.xacro  ros2_control.xacro  ros2_control_4WD.xacro
launch/: 3d_depth_mapping_rtab.launch.py  codechayduoc.py  depth.py  imu_filter.py  launch_sim.launch.py  launch_yolov8.launch.py  lidar_camera_fusion.py  localization.launch.py  navigation.launch.py  object_detection_and_tracking.py  online_async_launch.py  pathplanner.py  publish_pcl.py  rsp.launch.py  rtabmap_launch.py  rtap_mapping.launch.py  send_goal.py  send_goal_an.py  trajectory.py  websocket.py
msg/: InferenceResult.msg
scripts/: lidar_estimation_node.py  yolov8_ros2_pt.py  yolov8_ros2_pt_old.py  yolov8_ros2_subscriber.py
src/: voxelizing.cpp
worlds/: depth.world  factory.world  human.world  obstacle.world  test.world  thunghiem.world
