<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="my_email@email.com">Huy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>yolov8_msgs</depend>
  <depend>ros2_controllers</depend>
  <depend>vision_msgs</depend>

  
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <!-- Rtabmap -->
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_msgs</exec_depend>
  <exec_depend>rtabmap_util</exec_depend>
  <exec_depend>rtabmap_rviz_plugins</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_util</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>

  <url type="bugtracker">https://github.com/introlab/rtabmap_ros/issues</url>
  <url type="repository">https://github.com/introlab/rtabmap_ros</url>

  
</package>